[package]
name = "stitchbot"
version = "1.0.1"
edition = "2025"

[[bin]]
name = "stitchbot"
path = "src/main.rs"

[[bin]]
name = "miner_listener"
path = "src/miner_listener.rs"

[dependencies]
petgraph = "0.6"
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v1.0.1" }
kaspa-rpc-core       = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v1.0.1" }
kaspa-wallet-core    = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v1.0.1" }
kaspa-p2p-lib        = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v1.0.1" }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
keyring = "2.3"
zeroize = "1.8"
secp256k1 = "0.28"
bincode = "1.3"
rand = "0.8"
chrono = "0.4"
hex = "0.4"
blake2s_simd = "1.0"
