[package]
name = "stitchbot"
version = "1.0.1"
edition = "2024"

[[bin]]
name = "stitchbot"
path = "src/main.rs"

[[bin]]
name = "miner_listener"
path = "src/miner_listener.rs"

[dependencies]
petgraph = "0.6"
kaspa-consensus-core = { version = "0.15.0" }
kaspa-rpc-core       = { version = "0.15.0" }
kaspa-wallet-core    = { version = "0.15.0" }
kaspa-p2p-lib        = { version = "0.15.0" }
kaspa-wrpc-client    = { version = "0.15.0" }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
keyring = "2.3"
zeroize = "1.8"
secp256k1 = "0.28"
bincode = "1.3"
rand = "0.8"
chrono = "0.4"
hex = "0.4"
blake2s_simd = "1.0"
kaspa-addresses = "0.15.0"
rustworkx-core = "0.17.1"
graphrs = "0.11.14"
