[package]
name = "stitchbot"
version = "2.0.0"
edition = "2024"

[[bin]]
name = "stitchbot"
path = "src/main.rs"

[dependencies]
# Kaspa crates: local rusty-kaspa 2.0.1 (path deps) — compilable + the real API reference.
kaspa-grpc-client    = { path = "../rusty-kaspa/rpc/grpc/client" }
kaspa-rpc-core       = { path = "../rusty-kaspa/rpc/core" }
kaspa-consensus-core = { path = "../rusty-kaspa/consensus/core" }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
chrono = "0.4"
